# claude-software-skills

./: .gitignore  .gitmodules  README.md
.claude-plugin/: marketplace.json
.claude/skills/: README.md  evolve
.githooks/: pre-commit
.github/: AUTO-DEV.md
.github/ISSUE_TEMPLATE/: auto-dev.yml
.github/memory/: index.md
.github/workflows/: auto-dev-feedback.yml  auto-dev-queue.yml  auto-dev-reusable.yml  auto-dev.yml  ci.yml  release.yml
development-stacks/.claude-plugin/: plugin.json
development-stacks/ai-ml-integration/templates/: README.md  embedding-utils.py  llm-config.ts
development-stacks/backend/: SKILL.md
development-stacks/backend/templates/: README.md
development-stacks/cloud-platforms/templates/: README.md  cdk-stack.ts  main.tf  serverless.yml
development-stacks/database/: SKILL.md
development-stacks/database/templates/: README.md  docker-compose.db.yml  migration.sql  schema.prisma
development-stacks/edge-iot/: reference.md
development-stacks/frontend/: SKILL.md
development-stacks/frontend/templates/: README.md
development-stacks/mobile/: SKILL.md
development-stacks/mobile/flame/: SKILL.md
development-stacks/mobile/templates/: README.md  app.json  eas.json  pubspec.yaml
development-stacks/realtime-systems/templates/: README.md  sse-handler.ts  websocket-server.ts
docs/: QUICKSTART.md  USAGE-GUIDE.md  V1-ROADMAP.md
domain-applications/.claude-plugin/: plugin.json
domain-applications/communication-systems/: SKILL.md
domain-applications/communication-systems/templates/: README.md  email-template.html  notification-types.ts
domain-applications/content-platforms/templates/: README.md  cms-schema.ts
domain-applications/desktop-apps/templates/: README.md  electron-main.ts  tauri.conf.json
domain-applications/developer-tools/templates/: README.md  cli-boilerplate.ts
domain-applications/e-commerce/templates/: README.md  cart-schema.ts  checkout-flow.ts
domain-applications/game-development/: SKILL.md
domain-applications/game-development/flame/: SKILL.md
examples/: install-for-project.md
programming-languages/.claude-plugin/: plugin.json
programming-languages/cpp/: SKILL.md
programming-languages/csharp-dotnet/templates/: README.md  WebApi.csproj  appsettings.json
programming-languages/go/: SKILL.md
programming-languages/go/templates/: Makefile  README.md  go.mod
programming-languages/java-kotlin/templates/: README.md  build.gradle.kts  pom.xml
programming-languages/php/: SKILL.md
programming-languages/php/templates/: README.md  composer.json  phpunit.xml
programming-languages/python/: SKILL.md
programming-languages/python/templates/: README.md  requirements-dev.txt  requirements.txt
programming-languages/ruby/: SKILL.md
programming-languages/ruby/templates/: .rubocop.yml  Gemfile  README.md
programming-languages/rust/: SKILL.md
programming-languages/rust/templates/: Cargo.toml  README.md
programming-languages/shell-bash/scripts/: README.md  common-utils.sh
programming-languages/sql/: SKILL.md
programming-languages/sql/templates/: README.md  migration-template.sql
programming-languages/swift/: SKILL.md
scripts/: setup-auto-dev-apikey.sh  setup-auto-dev-max.sh  setup-auto-dev.sh
software-design/.claude-plugin/: plugin.json
software-design/api-design/: SKILL.md
software-design/architecture-patterns/: SKILL.md
software-design/design-patterns/: SKILL.md
software-design/system-design/: SKILL.md
software-design/ux-principles/: reference.md
software-engineering/.claude-plugin/: plugin.json
software-engineering/code-quality/: SKILL.md
software-engineering/documentation/: SKILL.md
software-engineering/internationalization/: SKILL.md
software-engineering/performance-optimization/: SKILL.md  reference.md
software-engineering/testing-strategies/: SKILL.md
tools-integrations/.claude-plugin/: plugin.json
tools-integrations/analyze-repo/: README.md  SKILL.md
tools-integrations/auto-dev-setup/: SKILL.md
tools-integrations/claude-code-sdk/: SKILL.md
tools-integrations/project-management/: SKILL.md
(+45 files in other folders)
